--- a/src/index.css
+++ b/src/index.css
@@ -366,8 +366,7 @@ body {
     scrollbar-width: none;
 }
 
-/* Mask gradient for nav overflow */
-.mask-gradient-right {
+/* Mask gradient for nav overflow.mask-gradient-right {
     -webkit-mask-image: linear-gradient(to right, black 95%, transparent 100%);
     mask-image: linear-gradient(to right, black 95%, transparent 100%);
 }
