--- a/src/index.css
+++ b/src/index.css
@@ -371,3 +371,5 @@ body {
     -webkit-mask-image: linear-gradient(to right, black 95%, transparent 100%);
     mask-image: linear-gradient(to right, black 95%, transparent 100%);
 }
+
+/* Fixed navigation mask style */
